# dojo-wars

./: .gitignore  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_PLAN.md  NEXT_STEPS.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SESSION_SUMMARY.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  deploy-devnet.yml  frontend-ci.yml  pr-checks.yml  release.yml
backend/: Anchor.toml  Cargo.toml  README.md
backend/programs-ecs/components/battle/: Cargo.toml
backend/programs-ecs/components/clan/: Cargo.toml
backend/programs-ecs/components/ninja/: Cargo.toml
backend/programs-ecs/systems/battle/: Cargo.toml
backend/programs-ecs/systems/battle/src/: lib.rs
backend/programs-ecs/systems/recruit/: Cargo.toml
backend/programs-ecs/systems/recruit/src/: lib.rs
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: BattleModal.css  BattleModal.tsx  DojoDashboard.css  DojoDashboard.tsx  Game.css  Game.tsx  NinjaCard.css  NinjaCard.tsx
frontend/src/game/: EventBus.ts  PhaserGame.tsx  config.ts
frontend/src/hooks/: useClan.ts  useNinjas.ts  useSessionKey.ts
frontend/src/magicblock/: delegation.ts  vrfClient.ts
frontend/src/store/: battleStore.ts  gameStore.ts
frontend/src/types/: battle.ts  clan.ts  items.ts  ninja.ts  player.ts
frontend/src/utils/: sessionKeyManager.ts
(+18 files in other folders)
